--- a/learn-studio-front/src/app/exercises/mise-en-situation/mise-en-situation.component.scss
+++ b/learn-studio-front/src/app/exercises/mise-en-situation/mise-en-situation.component.scss
@@ -1,17 +1,52 @@
 @import "src/styles";
 
-.flexContent{
+::ng-deep .mat-step-header .mat-step-icon-selected {
+  background-color: $shadedBlueLink;
+}
+
+.spaced_paragraph {
+  line-height: 1.5em;
+}
+
+.centered {
+  text-align: center;
+}
+
+.chrono {
+  font-weight: bold;
+  font-size: 2em;
+  margin: 1em;
+}
+
+.consigne {
+  margin: 1.3em 0;
+  text-align: center;
+  width: 80vw;
+  color: $shadedBlueLink;
+  font-style: italic;
+  font-weight: bold;
+}
+
+.restraint_width{
+  text-align: justify;
+  width: 80vw;
+}
+
+.flex_wrapper {
   display: flex;
-  justify-content: space-between;
-  flex-wrap: nowrap;
-  width: 100%;
+  flex-direction: column;
+  justify-content: center;
   align-items: center;
 }
 
-.consigne{
-  color: grey;
-  font-style: italic;
+.flexContent{
+  display: flex;
+  flex-wrap: nowrap;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
 }
+
 
 .right-button{
   float: right;
@@ -24,4 +59,68 @@
 .blurry {
   filter: blur(3px);
   -webkit-filter: blur(3px);
+}
+
+.proposition {
+  width: 70vw;
+  text-align: left;
+}
+.proposition_index {
+  width: 10vw;
+  text-align: center;
+  color: $shadedBlue;
+  font-weight: bold;
+}
+
+.stepper_footer {
+  margin: 1em 0 0 0;
+}
+
+.example-list {
+  width: 80vw;
+  max-width: 100%;
+  border: solid 1px #ccc;
+  min-height: 60px;
+  display: block;
+  background: white;
+  border-radius: 4px;
+  overflow: hidden;
+}
+
+.example-box {
+  padding: 20px 10px;
+  border-bottom: solid 1px #ccc;
+  color: rgba(0, 0, 0, 0.87);
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  box-sizing: border-box;
+  cursor: move;
+  background: white;
+  font-size: 14px;
+}
+
+.cdk-drag-preview {
+  box-sizing: border-box;
+  border-radius: 4px;
+  box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
+  0 8px 10px 1px rgba(0, 0, 0, 0.14),
+  0 3px 14px 2px rgba(0, 0, 0, 0.12);
+}
+
+.cdk-drag-placeholder {
+  opacity: 0;
+}
+
+.cdk-drag-animating {
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
+
+.example-box:last-child {
+  border: none;
+}
+
+.example-list.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
