--- a/learn-studio-front/src/app/pages/landing-page/landing-page.component.html
+++ b/learn-studio-front/src/app/pages/landing-page/landing-page.component.html
@@ -6,6 +6,7 @@
       </button> -->
       <img src="./assets/logo_txt_white.png" height="150">
     </div>
+    <div>Une plateforme dédié aux Autistes</div>
     <div class="iconWrapper">
       <button (click)="click_login()" class="loginButton">Connexion</button>
       <button (click)="click_register()" class="registerButton">Inscription</button>
