--- a/learn-studio-front/src/app/pages/restrictedContent/navigation-bar/navigation-bar.component.scss
+++ b/learn-studio-front/src/app/pages/restrictedContent/navigation-bar/navigation-bar.component.scss
@@ -1,6 +1,7 @@
 @import "src/styles";
 
 .toolbar {
+  height: $headerHeight;
   background-color: $shadedBlue;
   color: $shadedBlueTxt;
   display: flex;
