--- a/learn-studio-front/src/app/pages/landing-page/landing-page.component.html
+++ b/learn-studio-front/src/app/pages/landing-page/landing-page.component.html
@@ -6,7 +6,7 @@
       </button> -->
       <img src="./assets/logo_txt_white.png" height="150">
     </div>
-    <div>Une plateforme dédié aux Autistes</div>
+    <div>Une plateforme dédiée aux Autistes</div>
     <div class="iconWrapper">
       <button (click)="click_login()" class="loginButton">Connexion</button>
       <button (click)="click_register()" class="registerButton">Inscription</button>
@@ -18,6 +18,7 @@
       <h1>Développe ton potentiel <br/>en 20 minutes par jour</h1>
 
       <button (click)="click_register()" class="mainCallToAction">Je m'inscris gratuitement</button>
+      <button class="callToAction9" (click)="click_personality_form()" >Je teste ma personnalité</button>
     </div>
     <mat-card class="landingCard">
       <mat-card-title>Découvre ta personnalité, améliore tes soft skills à ton rythme, et décroche le job de tes rêves !</mat-card-title>
