--- a/learn-studio-front/src/app/pages/authentification/register/register.component.scss
+++ b/learn-studio-front/src/app/pages/authentification/register/register.component.scss
@@ -19,7 +19,7 @@
 
 
   .title {
-    margin: 1em 0;
+    margin: 1em 0 2em 0;
     color: $shadedBlue;
     font-weight: bold;
     font-size: 2em;
