--- a/learn-studio-front/src/app/pages/personality-form/personality-form.component.scss
+++ b/learn-studio-front/src/app/pages/personality-form/personality-form.component.scss
@@ -63,7 +63,8 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  padding: 0.2em 0;
+  padding: 0.5em 0;
+  width: 90vw;
 }
 
 .header_line {
@@ -98,49 +99,22 @@ li {
   border-bottom: 1px solid #EEEEEE;
 }
 
-::ng-deep .radio:nth-child(1) .mat-radio-button.mat-accent .mat-radio-inner-circle {
-  background-color: greenyellow!important;   /*inner circle color change*/
-}
-::ng-deep .radio:nth-child(2) .mat-radio-button.mat-accent .mat-radio-inner-circle {
-  background-color: yellow!important;   /*inner circle color change*/
-}
-::ng-deep .radio:nth-child(3) .mat-radio-button.mat-accent .mat-radio-inner-circle {
+
+::ng-deep .radio .mat-radio-button.mat-accent .mat-radio-inner-circle {
   background-color: orange!important;   /*inner circle color change*/
 }
-::ng-deep .radio:nth-child(4) .mat-radio-button.mat-accent .mat-radio-inner-circle {
-  background-color: red!important;   /*inner circle color change*/
-}
-
-::ng-deep .radio:nth-child(1) .mat-radio-button.mat-accent.mat-radio-checked .mat-radio-outer-circle {
-  background-color: white!important;   /*inner circle color change*/
-  border-color: greenyellow!important; /*outer ring color change*/
-}
-::ng-deep .radio:nth-child(2) .mat-radio-button.mat-accent.mat-radio-checked .mat-radio-outer-circle {
-  background-color: white!important;   /*inner circle color change*/
-  border-color: yellow!important; /*outer ring color change*/
-}
-::ng-deep .radio:nth-child(3) .mat-radio-button.mat-accent.mat-radio-checked .mat-radio-outer-circle {
+::ng-deep .radio .mat-radio-button.mat-accent.mat-radio-checked .mat-radio-outer-circle {
   background-color: white!important;   /*inner circle color change*/
   border-color: orange!important; /*outer ring color change*/
-}
-::ng-deep .radio:nth-child(4) .mat-radio-button.mat-accent.mat-radio-checked .mat-radio-outer-circle {
-  background-color: white!important;   /*inner circle color change*/
-  border-color: red!important; /*outer ring color change*/
-}
-
-::ng-deep .radio:nth-child(1) .mat-radio-button.mat-accent .mat-radio-inner-circle {
-  background-color: greenyellow!important;   /*inner circle color change*/
-}
-::ng-deep .radio:nth-child(2) .mat-radio-button.mat-accent .mat-radio-inner-circle {
-  background-color: yellow!important;   /*inner circle color change*/
-}
-::ng-deep .radio:nth-child(3) .mat-radio-button.mat-accent .mat-radio-inner-circle {
-  background-color: orange!important;   /*inner circle color change*/
-}
-::ng-deep .radio:nth-child(4) .mat-radio-button.mat-accent .mat-radio-inner-circle {
-  background-color: red!important;   /*inner circle color change*/
 }
 
 ::ng-deep  .mat-radio-button.mat-accent.mat-radio-checked .mat-radio-ripple .mat-ripple-element {
   background-color: transparent!important;   /*inner circle color change*/
+}
+
+.matstep_wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
