--- a/learn-studio-front/src/app/pages/restrictedContent/exercises-list/exercises-list.component.scss
+++ b/learn-studio-front/src/app/pages/restrictedContent/exercises-list/exercises-list.component.scss
@@ -1,6 +1,20 @@
 @import "src/styles";
 
+.theme {
+  margin: 4vh 0 0 0;
+  width: 92vw;
+  font-weight: bold;
+  font-size: medium;
+  padding: 2vh 1vw;
+  display: flex;
+  flex-direction: column;
+  box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.75);
+  -webkit-box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.75);
+}
+
 .listWrapper {
+  width: 90vw;
   padding: 2em;
   display: flex;
   flex-flow: row wrap;
